Working on report

--- a/src/template.html
+++ b/src/template.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-        <title id="title"></title>
+        <title id="title">Setups</title>
         <link type="text/css" rel="stylesheet" href="template.css"></link>
     </head>
     <body>
@@ -9,9 +9,9 @@
         <ul class="content"> 
             <li><img src="BARC.L.png"></img></li> 
             <li>
-            <table>
+            <table class="prices">
                 <tr><th>Date</th><th>Open</th><th>High</th><th>Low</th><th>Close</th></tr>
-                <tr><td>20140101</td><td>1</td><td>2</td><td>3</td><td>4</td></tr>
+                <tr class="r1"><td>20140101</td><td>1</td><td>2</td><td>3</td><td>4</td></tr>
                 <tr><td>20140101</td><td>1</td><td>2</td><td>3</td><td>4</td></tr>
                 <tr><td>20140101</td><td>1</td><td>2</td><td>3</td><td>4</td></tr>
                 <tr><td>20140101</td><td>1</td><td>2</td><td>3</td><td>4</td></tr>
@@ -19,5 +19,6 @@
             </table>
             </li> 
         </ul>
+
     </body>
 </html>
